2009-11-13,3 Oliver Winker <oli1417@hallo.ms>

	* Part3) mac80211 SW crypto support for WPA(2)

	Doing the crypto by mac80211 requires that the acx is not doing any 
	WEP crypto himself. Otherwise TX "WEP key not found" errors occur.

	This change disables the WEP crypto by not configuring the WEP cache and 
	leaving	WEPCacheStart=WEPCacheEnd.
 
	By disabling WEP using WEPCacheStart=WEPCacheStart the is acx not trying any
	own crypto anymore. All crypto (including WEP) is pushed to mac80211 for the
	moment.

	=> This allows successful WPA(2) association and data transfers (Tx,Rx) on
	the hx4700 using the slave-mem interface (mem.c).
	
	TODO: Under load condition with slave-mem on hx4700 Rx path still stalls 
	after some time.

2009-11-13,2 Oliver Winker <oli1417@hallo.ms>

	* Part2) Miscellaneous changes (common.c ...)
	
	- mac80211 API changes

	- Start/stop queue handling

	- Removed #ifdef of older kernel versions

	- pci.c, usb.c: TODO 

	- Misc, smaller changes:
		. struct ieee80211_tx_info *ctl = IEEE80211_SKB_CB(skb);
		. Included free irq in e_remove. Avoids crash when modules is removed.
		. ieee80211_get_tx_rate(adev->ieee, ieeectl)->hw_value changed to 
			ieee80211_get_tx_rate(adev->ieee, ieeectl)->bitrate
		. acx_key_write: Fix on default key 
		. Fixed productid, etc. in acx_s_parse_configoption
		. Removed ieee80211_tx_info, since contained in sk_buff *skb
		. Added ieee80211 queue status to diag output 

2009-11-13,1 Oliver Winker <oli1417@hallo.ms>
	* First part of a series of commits. These commits roughly group together 
	changes	in different areas of the acx code. The grouping is done to have 
	at least some basic split of the changes. Each single commit however is not 
	working	stand-alone. 
	
	=> The end of this series will define a new baseline, from where single 
	commits	should be well outlined and workable. 
	
	* Part1) Add slave memory support (mem.c)
	
		- Add mem.c from linux-handhelds-2.6-2.6.21-hh20-r16
		